# connect4

./: .gitignore  .replit  README.md  check_submission.py  feature_vectors.md  main.py  pyproject.toml  requirements.txt
src/competitor_code/: game_mechanics.py  team_winner.py  template_team.py
tests/: test_env.py
