[tool.black]
line-length = 100
target-version = ['py37', 'py38']
exclude = '''
/(
    competitor_code/team_[0-9]*\.py
    venv.*
    \.eggs
  | \.git
  | \.mypy_cache
)/
'''
[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
